# Task-Management-CLI

./: .env  Cargo.toml
local_tasks.db/: db  snap.000000000000015A
src/: cloud_sync.rs  local_storage.rs  main.rs  task.rs
src/auth/: auth_manager.rs  mod.rs  user.rs
src/tasks/: task.rs  task_manager.rs
src/utils/: cli_parser.rs
