[package]
name = "minor_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
argon2 = "0.3.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
bcrypt = "0.10.1"
async-trait = "0.1.52" # Add this line
