[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
mongodb = "2.8.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sled = "0.34"
dotenv = "0.15"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.3"
